Revised Base64 Encoder, Decoder
Revised Base64 Encoder, Decoder