@@ -42,6 +42,11 @@ Rev. history : 2018-07-27
 Version : 0.7.2
 	Revised setting header field function.
 Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
+
+Rev. history : 2019-04-29
+Version : 0.8.2
+	Revised Base64 Encoder/Decoder.
+Modifier : Jaehee Ha (jaehee.ha@kaist.ac.kr)
 */
 /* -------------------------------------------------------- */
 
@@ -57,6 +62,7 @@ import java.net.InetSocketAddress;
 import java.net.URI;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -64,7 +70,6 @@ import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 
-import sun.misc.BASE64Encoder;
 
 class MMSRcvHandler {
 	HttpServer server = null;
@@ -245,7 +250,7 @@ class MMSRcvHandler {
 	        	
 	            fileName = System.getProperty("user.dir")+fileName.trim();
 	            File file = new File (fileName);
-	            BASE64Encoder base64Encoder = new BASE64Encoder();
+	            Base64.Encoder base64Encoder = Base64.getEncoder();
 	            in = new FileInputStream(file);
 	
 	            byteOutStream=new ByteArrayOutputStream();
@@ -259,7 +264,7 @@ class MMSRcvHandler {
 	            }
 	
 	            byte fileArray[]=byteOutStream.toByteArray();
-	            encodeBytes=base64Encoder.encodeBuffer(fileArray).getBytes(); 
+	            encodeBytes=base64Encoder.encode(fileArray); 
         	} finally {
         		if (in != null) {
         			in.close();
